lab1/Test/L1-A-4-10.output
Error Type B at Line 6
Error Type B at Line 11
Error Type B at Line 12
Error Type B at Line 17
Error Type B at Line 19
Error Type B at Line 25
Error Type B at Line 31
