lab1/Test/L1-A-4-10.cmm
struct {
  int Hyh8EW [ 1855976578 ] [ 428239299 ] [ 1680015980 
    ] [ 101701207 ] ;
};
struct bFe4X2Ea3FEm_fPwgl D3AhCTS1k ( int mnLFs0KodcGsvOFH 
  1865788710 ] [ 1240523136 ] [ 1541740445 ] [ 1854199993 
  ] [ 1111277311 ] [ 16709624 ] [ 1366313211 ] [ 1124670075 
  ] [ 1335140422 ] [ 721674326 ] [ 2101419920 ] [ 308936698 
  ] , int v6 ) {
}
struct f != hFOlOuoSe ( ) {
  int [ 1814270730 ] = fkTfeXkVZN6EeF , LLibZ ;
  return - AM3c / Q8m4Vg6efRdFoS / aBeZmJadDfO9p - 
    YMImUr4M6XZ6du9V9BK <= c >= RFU <= p2narHcTQC_R < 
    HV >= RCkAgbh9g75RsYZjB2V > VjPX8ivv >= k3f17Mv2k0QgO 
    >= XXHl_azy_GLxt8Td2y >= emeHG6K == uAyX4RNa <= E_tw4dc3BrUmdFqI1g 
    >= if KGt0gQ == mx0RST >= i9yp2YY && RE2Nx_jmmg && 
    FOH3CJ5sULXmv4H ;
  while _3yZsMu59H )   zLT6aataZdc2nSEDU ;

}
struct {
  int Y , EKlsDCrya0VeejPOscP ;
}szdqBLKiAcPjOIr ( float zHule5qb ) {
  if ( nTcIuUZDIUL5i ) >   fjbM1uvKLf6cxI ;
else   if ( AsMFinJfMSti04kxzUO )   nkOcJHMsEnGkRVtWTtX 
    ;


}
int ( float Ji ) {
  struct TH2vB izCevieIT29DNY1 ;
}
float y9nMZEXWZzu5uO_TX3n0 [ 1892231728 ] , gXq4ch 

;
float ;
